fix for overflowing thumbnail

--- a/web/themes/custom/asulib_barrio/scss/components/views.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/views.scss
@@ -198,7 +198,7 @@
         border: 1px solid $border-color;
         img {
             max-height: 500px;
-            width: auto;
+            object-fit: contain;
         }
     }
 }
